clusters/apps/env/production/trilio/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: triliovault
  namespace: trilio
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`trilio.${SECRET_DOMAIN}`)"
      services:
        - name: k8s-triliovault-web
          port: 80
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: trilio.${SECRET_DOMAIN}
